# arm_takehome

./: .gitignore  README.md
deliverables/: countertop_left_trajectory.csv  countertop_right_trajectory.csv  m0609.urdf.xacro  mirror_raster_trajectory.csv  mirror_spiral_trajectory.csv  reachability.csv  wiping_joint_traj_counter.csv  wiping_log_counter.csv  wiping_log_mirror.csv
src/arm_ik_service/: package.xml  setup.cfg  setup.py
src/arm_ik_service/arm_ik_service/: coverage_planner.py  ik_service_node.py  planning_scene_node.py  reachability_heatmap.py  trajectory_executor.py  tuck_pose_sender.py  wiping_controller.py
src/arm_ik_service/launch/: m0609_demo.launch.py
